# residue

./: .gitignore  ARCHITECTURE_VALIDATION.md  BUILD_STATUS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PERFORMANCE_VALIDATION.md  README.md  RESEARCH.md  SECURITY.md  build_simple.py  final_ema_test.py  manual_ema_test.py  manual_results.py  performance_metrics.json  performance_report.json  performance_test.py  pyproject.toml  quick_ema_test.py  quick_test.py  requirements.txt  sanity_check_v3.py  setup.py  setup_v3.py  stress_test.py  test_v3_structural_integrity.py  v21_ultimate_validation.py  v2_1_optimal_weights_analysis.py  v2_1_validation_comparison.py  v2_1_weight_recommendations.json  validation_script_v3.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish-to-pypi.yml
examples/: README.md  benchmark.py  demo_audio_shield.py  llm_integration_demo.py  overhead_audit.py  performance_metrics.py  pytorch_integration.py  real_world_benchmark.py  selective_inference.py
legacy/docs/: GITHUB_RELEASE_CHECKLIST.md  PROJECT_STATUS.md  SCIENTIFIC_VALIDATION.md  SCIENTIST_BIRTH_CERTIFICATE.md  setup.py
legacy/tests/: real_world_test.py  test_v2_analog_scaling.py  test_v2_optimized.py
legacy/v1_prototypes/: entropy_controller_v2.cpp  entropy_only_bindings_final.cpp  entropy_only_bindings_fixed.cpp
performance_testing/: performance_analysis.py  plot_results.py  pytorch_llm_test.py  residue_v4_perf_suite.py  test_data_generator.py  v3_batch_benchmark.py  v3_performance_test.py  v3_pure_test.py
performance_testing/results/: scaling_benchmark.csv  sparsity_benchmark.csv
residue_protocol-4.2.4/tests/: test_async.py  test_dispatch_benchmark.py
src/: CMakeLists.txt
src/residue/: __init__.py  bindings.cpp  core.cpp  core.h  entropy_controller.cpp  entropy_controller.h  entropy_only_bindings.cpp  guardian.h  pytorch_bridge.py  residue_v3_bindings.cpp
src/residue_v2/: __init__.py
src/residue_wall/: aligned_gateway.h  async_observer.cpp  async_observer.h  cache_topology.h  isolation_zone.h  prefetch_engine.h  residue_wall.cpp  residue_wall.h
tests/: production_test.py  test_entropy_controller.py  test_jitter.py  test_residue_wall.py  test_simd.cpp  test_stress.py  test_thermal_stress.py  test_v41_hardening.py  test_v41_isolation.py  test_v42_fullscan.py  v3_structural_test.py
