[build-system]
requires = [
    "setuptools>=61.0",
    "pybind11>=2.13.6"
]
build-backend = "setuptools.build_meta"

[project]
name = "residue-protocol"
version = "4.2.4"
description = "Bare-Metal AVX2 Inference Shield for LLMs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Orestis", email = "orestisgatos@gmail.com"}
]
maintainers = [
    {name = "Orestis", email = "orestisgatos@gmail.com"}
]
keywords = ["inference", "optimization", "llm", "entropy", "scaling", "structural-heuristics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy"
]
build = [
    "pybind11>=2.13.6",
    "scikit-build-core>=0.4.0",
    "cmake>=3.15",
    "ninja; sys_platform != 'win32'"
]

[project.urls]
Homepage = "https://github.com/Orest-gt/residue"
Documentation = "https://github.com/Orest-gt/residue/blob/main/README.md"
Repository = "https://github.com/Orest-gt/residue.git"
"Bug Tracker" = "https://github.com/Orest-gt/residue/issues"

[tool.setuptools]
packages = ["residue"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
residue = ["*.pyd", "*.so", "*.dll"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
skip = "*-win32 *-manylinux_i686"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
